# neutryx-core

./: .dockerignore  .gitignore  CODEBASE_EXPLORATION_REPORT.md  CODE_DUPLICATION_ANALYSIS.md  CODE_DUPLICATION_SUMMARY.txt  CONTRIBUTING.md  Dockerfile  EQUITY_MODELS_GUIDE.md  LICENSE  README-KUBERNETES.md  README.md  RELEASE_CHECKLIST.md  TEST_OPTIMIZATION.md  conftest.py  mkdocs.yml  pyproject.toml  repo_structure.txt  requirements-dev.txt  requirements.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
config/: dev.yaml
demos/: README.md  advanced_features_example.py  asset_class_showcase.py  fx_vol_market_example.py
docs/: BANK_TRADING_SYSTEM.md  FICTIONAL_BANK.md  api_reference.md  architecture.md  ci_pipeline.md  comparison_analysis.md  configuration.md  dataflow-lineage.md  deployment.md  design_decisions.md  developer_guide.md  fpml_integration.md  getting_started.md  governance_dataflow.md  index.md  market_data.md  monitoring.md  observability.md  orchestration.md  overview.md  performance_tuning.md  products.md  references.md  requirements.txt  roadmap.md  security_audit.md  test_coverage.md  tracking.md  trade_management.md  troubleshooting.md  tutorials.md  valuations_api_summary.md  valuations_comprehensive.md  valuations_index.md  valuations_quickstart.md
examples/: 01_bs_vanilla.py  02_path_dependents.py  amr_pde_demo.py  bank_trading_example.py  bayesian_model_averaging_example.py  ccp_clearing_example.py  clearing_integration_example.py  factor_analysis_example.py  fictional_bank_demo.py  frtb_drc_rrao_example.py  fx_vol_advanced_example.py  market_rates_bootstrap.py  multi_curve_example.py  pnl_attribution_demo.py  regularization_demo.py  regulatory_ima_example.py  rfq_ccp_workflow_demo.py  sensitivity_analysis_demo.py  simm_umr_example.py  swaptions_and_exotic_ir_demo.py  trade_generation_demo.py
fictional-bank-app/: ARCHITECTURE.md  README.md  TROUBLESHOOTING.md  USER_GUIDE.md  cli.py  (+10 more)
(+953 files in other folders)
