[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neutryx-core"
version = "0.1.0"
description = "A compact JAX-based quant finance library (pricing, risk, XVA, calibration)."
authors = [{ name = "Neutryx", email = "dev@neutryx.tech" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "jax>=0.4.26",
  "jaxlib>=0.4.26",
  "numpy>=1.26.0",
  "scipy>=1.11.0",
  "pandas>=2.1.0",
  "pyyaml>=6.0.1",
  "optax>=0.1.8",
  "typing_extensions>=4.10.0",
  "pytest>=7.4.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "pydantic>=2.6.0",
  "grpcio>=1.62.0",
  "protobuf>=4.25.0",
  "prometheus-client>=0.20.0",
  "opentelemetry-api>=1.25.0",
  "opentelemetry-sdk>=1.25.0",
  "opentelemetry-exporter-otlp-proto-http>=1.25.0",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "opentelemetry-instrumentation-grpc>=0.46b0"
]

[project.optional-dependencies]
dev = [
  "pytest-benchmark>=4.0.0",
  "pip-audit>=2.6.1",
  "bandit>=1.7.7",
  "jupyterlab>=4.4.8",
]
quantlib = ["QuantLib>=1.29"]
eigen = ["pybind11>=2.11"]
native = ["QuantLib>=1.29", "pybind11>=2.11"]
marketdata = [
  "asyncpg>=0.29.0",
  "motor>=3.3.1"
]

[tool.setuptools.packages.find]
where = ["src"]

# ---- moved from setup.cfg ----
[tool.flake8]
max-line-length = 100
extend-ignore = ["E203"]

[tool.pytest.ini_options]
addopts = "-q"
markers = [
    "regression: marks tests as part of the regression suite",
    "performance: marks tests that exercise performance benchmarks",
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
target-version = ["py310"]
extend-exclude = "docs/"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
